feat(grader)!: auto-sync problem grading dir